--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.administrator.mylibrary.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/id_to_go"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
